# krea-2-turbo-mlx

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  setup.sh
docs/: artifact-contract.md
frontend/: .gitignore  AGENTS.md  components.json  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/app/: globals.css  root.jsx
frontend/app/components/: krea-workspace.jsx  krea-workspace.lora.test.jsx  krea-workspace.test.jsx  theme-sync.jsx  transient-scrollbars.jsx  transient-scrollbars.test.jsx
loras/: README.md
scripts/: launch.sh  toolchain.sh
src/krea_2_turbo_mlx/: _weights.py  artifact_write.py  cli.py  constants.py  convert.py  doctor.py  errors.py  generation_validation.py  gui.py  hf.py  json_io.py  local_server_security.py  lora.py  manifest.py  pipeline.py  png.py  safetensors_copy.py  safetensors_header.py  scheduler.py  setup_flow.py  tensor_selection.py  text_conditioning.py  text_encoder.py  transformer.py  vae.py
tests/: safetensors_fixtures.py  test_artifact_write.py  test_cli.py  test_convert.py  test_doctor.py  test_generate_oracle.py  test_generation_validation.py  test_gui.py  test_gui_security.py  test_hf.py  test_lora.py  test_manifest.py  test_pipeline.py  test_png.py  test_safetensors_copy.py  test_safetensors_header.py  test_scheduler.py  test_setup.py  test_setup_scripts.py  test_tensor_selection.py  test_text_conditioning.py  test_text_encoder.py  test_text_oracle.py  test_transformer.py  test_transformer_oracle.py  test_vae.py  test_vae_oracle.py
(+97 files in other folders)
